Use onclick to trigger print page JavaScript
This avoids conflicts with analytics code putting
javascript:window.print() into a cookie and getting detected as an XSS
by a WAF.

--- a/loc/templates/page_print.html
+++ b/loc/templates/page_print.html
@@ -14,7 +14,7 @@
             <h3>Image provided by {{ issue.batch.awardee.name }}</h3>
             <h3 class="">Persistent link: <a href="{{ url }}">https://{{ host }}{{ url }}</a></h3>
             <p class="print_nav">
-                <a class="clip_print" href="javascript:window.print();">
+                <a class="clip_print" href="#" onClick="window.print();">
                     <strong>Print this image</strong>
                 </a>
                 |
